--- a/Styles.css
+++ b/Styles.css
@@ -44,6 +44,15 @@ nav ul li{
     display: inline-block;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+nav ul a{
+    padding-left: 35px;
+    padding-right: 10px;
+    display: inline-block;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: white;
+    text-decoration: none;
+}
     
 label.logo{
     float: left;
@@ -54,12 +63,19 @@ label.logo{
     font-weight: bold;
     cursor: pointer;
 }
+
 img.logo{
     float: left;
     margin-left: 15px;
     margin-top: 15px;
 }
+
 nav ul li:hover{
+    font-size: 21px;
+    cursor: pointer;
+}
+
+nav ul a:hover{
     font-size: 21px;
     cursor: pointer;
 }
@@ -135,4 +151,38 @@ img.logo1{
     margin-left: 10px; 
     margin-right: 10px;
     text-decoration: none;
+}
+
+.card-frame{
+    height: 350px;
+    width: 250px;
+    background-color: var(--secondary-color);
+    border-radius: 10px;
+    box-shadow: 0 5px 4px 0 rgba(0,0,0,.2); 
+    text-decoration: none;
+    display:inline-block;
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+
+.card-frame:hover{
+    height: 360px;
+    width: 260px;
+}
+
+.card-contents-text{
+    color: black;
+    text-decoration: none;
+    font-size: 15px;
+    margin-left: 10px;
+}
+
+.card-contents-text{
+    font-size: 16px;
+}
+
+.card-container{
+    width: 1100px;
+    height: 800px;
+    margin:auto;
 }
